--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="utf-8" />
-	<title>Animation</title>
+	<title>Coating line simulation</title>
 	<!--[if lt IE 9]><script type="text/javascript">alert("We're sorry. Your browser is not able to display this animation. Google Chrome will provide the best quality animation and can be downloaded for free.");</script><![endif]-->
 	<link rel="stylesheet" href="css/style.css" />
 	<script type="text/javascript" src="js/d3/d3.v3.js"></script>
