--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript" src="js/d3/d3.v3.js"></script>
 </head>
 <body>
-	<h1>Coating Line Simulation</h1>
+	<h1>Paint Line Simulation</h1>
 	<div id="container">
 		
 	</div>
